test/corpus/comments.txt
====================
Simple comment
====================

<%-- This is a comment --%>

---

(document
  (ss_comment
    (ss_comment_start)
    (ss_comment_content)
    (ss_comment_end)))

====================
Multiline comment
====================

<%--
  Multi-line
  comment content
--%>

---

(document
  (ss_comment
    (ss_comment_start)
    (ss_comment_content)
    (ss_comment_end)))

====================
Empty comment
====================

<%----%>

---

(document
  (ss_comment
    (ss_comment_start)
    (ss_comment_end)))
